2015-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.2.

2015-08-21  Steve Lhomme <robUx4@gmail.com>

        * EbmlElement::FindNextElement(): Handle EOF when reading the
        element size properly.

2015-06-15  Steve Lhomme <robUx4@gmail.com

        * Disable debug code for builds for the Windows App Store.

2015-06-12  Cristian Morales Vega <reddwarf@opensuse.org>

        * Update the license information: use latest official text for the
        LGPL.

2015-02-23  Steve Lhomme  <robux4@gmail.com>

        * EbmlString::ValidateSize(): only allow the same maximum size as
        EbmlBinary.

2015-01-04  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.1.

        * EbmlElement::Render(): doesn't catch exceptions anymore. Instead
        exceptions generated from the IOCallback class (e.g. if a write
        failed) are propagated to the caller.

2014-12-21  Moritz Bunkus  <moritz@bunkus.org>

        * build system: switched the build system from hand-crafted
        Makefiles to an autoconf/automake-based system. A pkg-config file
        will be installed as well; its name is »libebml«. Patch by Jan
        Engelhardt <jengelh@inai.de>.

2014-12-20  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMaster::Read(): when reading with SCOPE_ALL_DATA only those
        elements that could successfully be read will be kept
        (e.g. defective block groups will be dropped).

2014-12-19  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMemoryStream: add a new class for safe memory access that
        throws exception on failures.

2014-12-18  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMaster: Fixed read() trying to calculate the end position of
        elements with an unknown size. This avoids endless loops and
        assertions in certain cases. See https://trac.bunkus.org/ticket/1089

2013-03-19 mosu
New 1.3.0 version:
    * Note that this version is not binary compatible to its predecessors.